--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "^1.5.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.11",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-swipeable-row": "^0.8.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
